wip: adding linked list page

--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -3,7 +3,7 @@
 @import '../../styles/breakpoints';
 
 nav {
-    background-color: $primaryDark;
+    background-color: $secondaryDark;
     border-bottom: 1px solid $border;
     width: 100%;
     height: 50px;
