--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 // colors
-$primaryDark: #282828;
+$primaryDark: #1A1A1A;
+$secondaryDark: #282828;
 $accent: #3d5af1;
 $alice-blue: #262626;
 $border: #464646;
