--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -4,18 +4,14 @@
 .hero {
     width: 100%;
     height: 675px;
-    @include justifyAlignCenter();
-
-
-    .hero-text {
-        font-size: 42px;
-        text-align: center;
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        @include tablet() {
-            width: 100%;
-        }
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    .category-list {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1.5rem;
     }
 }
